# anxiety

./: package-lock.json
backend/: .env  .env.example  Cargo.toml  ReadmeBack.md  database_structure.sql  database_structure.txt  test.txt
backend/migrations/: 20250402173326_create_users_table.sql
backend/src/: config.rs  main.rs  models.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: auth.rs  categories.rs  comments.rs  groups.rs  mod.rs  mood.rs  posts.rs
backend/src/routes/: auth.rs  comments.rs  groups.rs  mod.rs  mood.rs  posts.rs
backend/src/utils/: datetime.rs  error.rs  jwt.rs  mod.rs
frontend/: README.md  package-lock.json  package.json
frontend/chat-app/: README.md
frontend/chat-app/backend/: requirements.txt  transformers_config.py
frontend/chat-app/backend/app/: __init__.py  main.py
frontend/chat-app/backend/app/models/: chat.py
frontend/chat-app/frontend/: package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
frontend/src/app/components/: ChatWidget.tsx  Header.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/providers/: AuthProvider.tsx
frontend/src/app/recover-password/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: api.service.ts  auth.service.ts  comments.service.ts  posts.service.ts
(+28 files in other folders)
