[package]
name = "auth-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
bcrypt = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
